# ase-assignment-jack3761

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.709c554  README.md
include/: ClothMesh.h  ClothSim.h  MainWindow.h  NGLScene.h  Particle.h  Vec3.h
shaders/: ParticleFragment.glsl  ParticleVertex.glsl
src/: ClothMesh.cpp  ClothSim.cpp  Constraint.cpp  MainWindow.cpp  NGLScene.cpp  Particle.cpp  Vec3.cpp  main.cpp
tests/: ClothSimTests.cpp  ParticleTests.cpp
ui/: MainWindow.ui
